--- a/css/main.css
+++ b/css/main.css
@@ -18,12 +18,9 @@ nav {
     border: solid;
     border-color: black;
     height: 130px;
-    width: 70%; 
+    width: 40%;
 }
 
-.metrolics-header href{
-    float: right;
-}
 .nav-items {
     border: solid;
     border-color: aqua;
@@ -74,7 +71,8 @@ nav {
     width: 150%;
     height: 550px;
     display: flex;
-    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 
 .slider-image1 {
@@ -84,8 +82,6 @@ nav {
     width: 995px;
 
 }
-
-.grid 
 
 .intro {
     display: flex;
