--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400&display=swap');
+@fa-font-path:   "../font";
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400&display=swap%27');
+
+*{
+    font-family: 'Ubuntu', sans-serif;
+}
+
 html{
     color: #222; 
     font-size: 1em; 
@@ -37,9 +43,10 @@ main,
 section, 
 footer,
 header {
-    outline: 1px solid white; 
+    /* outline: 1px solid #ccc;  */
     min-height: 1rem; 
-    padding: 1rem; 
+    padding: 1.5rem;
+
 }
 
 .row{
@@ -52,6 +59,180 @@ header {
     position: relative; 
     /* background-color: rgb(242, 230, 177); */
 }
+
+.metrolics-header {
+    display: flex;
+    flex-direction: row;
+    height:50px;
+    width: 100%;
+}
+
+#metrolics-icon {
+    margin-left: 3%;
+    margin-top: 3%;
+}
+
+.nav-items {
+    height: 100px;
+    width: 100%;
+    padding: 0;
+    margin-left: 8%;
+    margin-top: -28px;
+    display: flex;
+    flex-direction: row;
+}
+
+.nav-button1 {
+    border: solid;
+    border-color: #25c389;
+    background-color: #25c389;
+    width: 10%;
+    height: 50px;
+
+}
+
+.nav-button2 {
+    border: solid;
+    border-color: #ffb901;
+    background-color: #ffb901;
+    width: 10%;
+    height: auto;
+}
+
+.nav-button3 {
+    border: solid;
+    border-color: #de6262;
+    background-color: #de6262;
+    width: 10%;
+    height: 50px;
+}
+
+.nav-button4 {
+    border: solid;
+    border-color: #1691bd;
+    background-color: #1691bd;
+    width: 10%;
+    height: 50px;
+}
+
+.nav-button5 {
+    border: solid;
+    border-color: #166ba2;
+    background-color: #166ba2;
+    width: 10%;
+    height: 50px;
+}
+
+.s-hidem-hide {
+    background-color: #eeee;
+    height: 460px;
+    margin-top: -23px;
+}
+
+.img-slider {
+    align-content: center;
+    margin-left: 195px;
+    margin-top: -48px;
+    height: 510px;
+
+}
+
+.intro {
+    text-align: center;
+    color: black;
+}
+
+.things-we-do {
+    text-align: center;
+    color: black;
+}
+
+.m-col-4 {
+    display: flex;
+    flex-direction: row;
+}
+
+.l-col-4{
+    display: flex;
+    justify-content: center;
+}
+.services {
+    display: flex;
+    justify-content: center;
+}
+
+.service-desc{
+    text-align: center;
+}
+
+.web-design {
+    margin-left: 20%;
+}
+
+.web-dev {
+    margin-left: 20%;
+}
+
+.solutions {
+    margin-left: 20%;
+}
+
+.photo {
+    margin-left: 20%;
+}
+
+.fa-home {
+    margin-left: 30px;
+}
+
+.fa-sitemap {
+    margin-left: 30px;
+}
+
+.fa-bullhorn {
+    margin-left: 30px;
+}
+
+.fa-envelope {
+    margin-left: 30px;
+}
+
+.fa-briefcase {
+    margin-left: 30px;
+}
+
+a {
+    text-decoration: none;
+    display: inline-block;
+    padding: 8px 16px;
+  }
+  
+  a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  .previous {
+    border-style: solid;
+    border-width: 5px;
+    border-color: black;
+    color: black;
+    float: left;
+    margin-top: 10%;
+  }
+  
+  .next {
+    border-style: solid;
+    border-width: 5px;
+    border-color: black;
+    color: black;
+    float: right;
+    margin-top: 10%;
+  }
+  
+  .round {
+    border-radius: 50%;
+  }
 
 .m-col-3{
     display: flex;
@@ -75,12 +256,12 @@ header {
     text-align: center;
 }
 
+
 @media screen and (max-width: 39.9375em) {
     .s-hide{
         display: none;
     }
 }
-
 
 @media screen and (min-width:40em) {
     .row {
